2003-11-23  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (make_shadow), (root_tile), (win_extents),
	(border_size), (paint_all), (repair_win), (map_win), (unmap_win),
	(add_win), (restack_win), (configure_win), (circulate_win),
	(destroy_win), (ev_serial), (ev_name), (ev_window), (main):
	
	Rename gussianMap to gaussianMap (who the heck is gus?)
	Allow for other names for the root pixmap
	Handle non-zero border widths better (need Composite change
	to display them though).
	Add MONITOR_UPDATE mode that eliminates double buffering and
	blanks the screen to make sequence of update operations visible.
	Leave damage object around to catch map damage right.
	Add CirculateNotify support.

2003-11-23  Eric Anholt  <anholt@FreeBSD.org>

	* xcompmgr.c: (border_size), (paint_all), (add_damage),
	(repair_win), (configure_win):
	Fix for latest Xfixes changes.

	Submitted by: <stephan@wilkogazu.nl>

2003-11-19  Carl Worth  <cworth@isi.edu>

	* xcompmgr.c: Eliminate several compiler warnings: missing
	includes, static functions, unused variables.  Remove confusing
	informational messages with the word "error" in them.

2003-11-14  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (main):
	Eliminate all delays in updates; let the X server scheduling
	handle things.

2003-11-13  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c:
	Reduce scheduling latency to 10ms

2003-11-13  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (make_gaussian_map), (sum_gaussian), (make_shadow),
	(shadow_picture), (paint_all), (main):
	Use an alpha map instead of an ARGB picture for shadows.
	Update last_update only when actually updating windows.

2003-11-11  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (win_extents), (paint_all), (add_win), (main):
	Detect ARGB windows, don't give them shadows, compose them
	correctly.

2003-11-10  Keith Packard  <keithp@keithp.com>

	* Makefile:
	* xcompmgr.c: (root_tile), (main):
	Track changes to _XROOTPMAP_ID property
